--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "serverless-stack-output",
+  "name": "@kevinsperrine/serverless-stack-output",
   "description": "Serverless plugin to process AWS CloudFormation Stack Output",
   "license": "MIT",
-  "author": "Sebastian Müller <mail@sbstjn.com>",
+  "author": "Kevin S. Perrine <kperrine@gmail.com>",
   "main": "dist",
   "scripts": {
     "clean": "rimraf dist",
@@ -44,6 +44,8 @@
     "sinon": "^2.3.6",
     "ts-jest": "^20.0.7",
     "tslint": "^5.5.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-config-security": "^1.13.0",
     "typescript": "^2.4.2"
   },
   "jest": {
@@ -55,5 +57,6 @@
       "ts",
       "js"
     ]
-  }
+  },
+  "version": "0.2.4"
 }
