--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@kevinsperrine/serverless-stack-output",
+  "version": "0.2.4",
   "description": "Serverless plugin to process AWS CloudFormation Stack Output",
   "license": "MIT",
   "author": "Kevin S. Perrine <kperrine@gmail.com>",
@@ -30,25 +31,35 @@
     "output"
   ],
   "dependencies": {
-    "tomlify-j0.4": "^2.0.0",
+    "tomlify-j0.4": "^3.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.5",
-    "@types/node": "^8.0.19",
-    "coveralls": "^2.13.1",
-    "dot-json": "^1.0.3",
+    "@types/jasmine-data-provider": "^2.2.1",
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.12",
+    "@types/sinon": "^5.0.7",
+    "@types/yamljs": "^0.2.30",
+    "coveralls": "^3.0.2",
+    "dot-json": "^1.0.4",
+    "husky": "^1.2.0",
     "jasmine-data-provider": "^2.2.0",
-    "jest": "^20.0.4",
+    "jest": "^23.6.0",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.3",
     "rimraf": "^2.6.2",
-    "sinon": "^2.3.6",
-    "ts-jest": "^20.0.7",
-    "tslint": "^5.5.0",
+    "sinon": "^7.2.0",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
-    "tslint-config-security": "^1.13.0",
-    "typescript": "^2.4.2"
+    "typescript": "^3.2.2"
   },
   "jest": {
+    "globals": {
+      "ts-jest": {
+        "diagnostics": false
+      }
+    },
     "transform": {
       ".*": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
@@ -58,5 +69,16 @@
       "js"
     ]
   },
-  "version": "0.2.4"
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "prettier --write --single-quote --parser typescript",
+      "tslint --project tsconfig.json --config tslint.json --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  }
 }
